@@ -1,11 +1,11 @@
 name = Libraries
-description = Allows version dependent and shared usage of external libraries.
+description = Allows version-dependent and shared usage of external libraries.
 core = 7.x
 files[] = tests/libraries.test
 
-; Information added by drupal.org packaging script on 2012-07-29
-version = "7.x-2.0"
+; Information added by drupal.org packaging script on 2013-03-09
+version = "7.x-2.1"
 core = "7.x"
 project = "libraries"
-datestamp = "1343561873"
+datestamp = "1362848412"
 
